# UCP3-GUI

./: .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitattributes  .gitignore  .prettierignore  .unimportedrc.json  LINUX.md  README.md  THIRD_PARTY_LICENSES  TODO.txt  Unofficial Crusader Patch 3.html  config-merge.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build-linux.yml  build-pr.yml  build-tauri.yml  build.yml  publish.yml
.husky/: pre-commit
release/app/: package-lock.json  package.json
resources/backgrounds/: mapping.yaml
resources/gameinfo/: game-version.yaml
resources/lang/: languages.yaml
resources/lang/sources/: ch.yaml  de.yaml  en.yaml  es.yaml  fa.yaml  fr.yaml  hu.yaml  ru.yaml  tr.yaml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  nsis-template-with-msvc.nsi  tauri.conf.json
src-tauri/backgrounds/: mapping.yaml
src-tauri/icons/: icon.icns
src-tauri/lang/sources/de/: gui-general.yaml
src-tauri/lang/sources/en/: gui-download.yaml  gui-editor.yaml
src-tauri/src/: constants.rs  file_support.rs  gui_config.rs  hash_utils.rs  logging.rs  main.rs  run_program.rs  utils.rs  zip_support.rs  zip_utils.rs
src/__tests__/: config.test.tsx  dependency-solver.test.ts  dependency-statement.test.ts
src/assets/game-assets/: Copyright Note.txt
src/common/config/: Config.ts  DependencyStatement.ts  ExtensionDependencySolver.ts  common.ts  permissions-choice.ts  permissions-number.ts  permissions-set.ts  value-permissions.ts
src/components/: base.css  components.css  main-page.css  main-page.tsx  scrollbar.css  variables.css  view-manager.css  view-manager.tsx  window.css  window.tsx
src/components/common/: minimal.css
src/components/credits/: credits.css  credits.md  credits.tsx  credits.txt
src/components/editor/: config-editor.tsx  extension-manager.tsx  footer.tsx  manager.tsx  ui-elements.tsx
src/components/footer/: footer.css  footer.tsx
src/components/game-starter/: game-starter.css  game-starter.tsx
src/components/general/: gradient-img.css  gradient-img.tsx  hooks.tsx  jotai-hooks.tsx  message.tsx  state-button.tsx  svg-helper.tsx  swr-components.tsx  swr-hooks.tsx  text.tsx
src/components/landing/: app.css  app.tsx  landing.css  landing.tsx  language-select.tsx
src/components/language-select/: language-select.css  language-select.tsx
src/components/markdown/: safer-markdown.tsx
src/components/modals/: CreatePluginModal.tsx  ModalOk.tsx  ModalOkCancel.tsx  abstract-modal.tsx  modal-create-plugin.tsx  (+3 more)
src/function/: dev.ts  fake-backend.ts  global-state.tsx  window-actions.ts
src/localization/: i18n.ts  localization.ts
src/main/: ApplicationFolderManager.ts  github-api.ts  main.ts  preload.ts  util.ts
src/renderer/: App.css  App.tsx  Editor.css  Editor.tsx  GlobalState.tsx  LanguageSelect.tsx  Manager.tsx  ViewManager.tsx  fakeBackend.ts  index.ejs  index.tsx  preload.d.ts  util.ts
src/tauri/: tauri-dialog.ts  tauri-files.ts  tauri-hooks.ts  tauri-http.ts  tauri-invoke.ts  tauri-listen.ts  tauri-misc.ts  tauri-shell.ts  tauri-window.ts
src/testing/: dump-extensions-state.ts  mocks.ts
tests/: Config.test.tsx  ConfigPoc.test.tsx  ConfigWarnings.test.tsx  DependencyStatement.test.tsx  ExtensionDependencySolver.test.tsx  uninstall-for-test.bat
tests/sample-data/: .gitignore
tools/: octokit-latest-json.ts
(+527 files in other folders)
